Modify the positions of elements

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="logo.png" alt="logo">
         <div class="header">
             <h1>Book's Library</h1>
-            <p>I have created a Library in order to add books that you have read. In addition, you can add some information that you think it is the best thing in the book. This is the good way to remind yourself about how great the book bring you and share it to other people.</p>
+            <p>I have created a Library in order to store books that you have read. In addition, you can add some contents which are the best in the book. This is the good way to remind yourself about how great the book bring you and share it to other people.</p>
             <hr>
         </div>
         
